assets/css/main.css
/* ... */
			body.ie #wrapper:after {
				background: rgba(36, 38, 41, 0.8);
			}

		body.modal-active #wrapper {
			-moz-filter: blur(8px);
			-webkit-filter: blur(8px);
			-ms-filter: blur(8px);
			filter: blur(8px);
		}

			body.modal-active #wrapper:after {
				pointer-events: auto;
				opacity: 1;
				visibility: visible;
				z-index: 10003;
			}

		#wrapper:before {
			-moz-animation: spinner 1s infinite linear !important;
			-webkit-animation: spinner 1s infinite linear !important;
			-ms-animation: spinner 1s infinite linear !important;
			animation: spinner 1s infinite linear !important;
			pointer-events: none;
			-moz-transition: top 0.75s ease-in-out, opacity 0.35s ease-out, visibility 0.35s;
			-webkit-transition: top 0.75s ease-in-out, opacity 0.35s ease-out, visibility 0.35s;
			-ms-transition: top 0.75s ease-in-out, opacity 0.35s ease-out, visibility 0.35s;
			transition: top 0.75s ease-in-out, opacity 0.35s ease-out, visibility 0.35s;
			background-image: url("images/spinner.svg");
			background-position: center;
			background-repeat: no-repeat;
			background-size: contain;
			content: '';
			display: block;
			font-size: 2em;
			height: 2em;
			left: 50%;
			line-height: 2em;
			margin: -1em 0 0 -1em;
			opacity: 0;
			position: fixed;
			text-align: center;
			top: 75%;
			visibility: hidden;
			width: 2em;
		}

		body.is-preload #wrapper:before {
			-moz-transition: opacity 1s ease-out !important;
			-webkit-transition: opacity 1s ease-out !important;
			-ms-transition: opacity 1s ease-out !important;
			transition: opacity 1s ease-out !important;
			-moz-transition-delay: 0.5s !important;
			-webkit-transition-delay: 0.5s !important;
			-ms-transition-delay: 0.5s !important;
			transition-delay: 0.5s !important;
			opacity: 0.25;
			top: 50%;
			visibility: visible;
		}

/* Header */

	body {
		padding: 0 0 0 0;
	}

	#header {
		-moz-transform: translateY(0);
		-webkit-transform: translateY(0);
		-ms-transform: translateY(0);
		transform: translateY(0);
		-moz-transition: -moz-transform 1s ease;
		-webkit-transition: -webkit-transform 1s ease;
		-ms-transition: -ms-transform 1s ease;
		transition: transform 1s ease;
		-moz-user-select: none;
		-ms-user-select: none;
		-webkit-user-select: none;
		background: #1f2224;
		top: 0em;
		height: 4.5em;
		left: 0;
		line-height: 4em;
		padding: 0 1.5em;
		position: fixed;
		user-select: none;
		width: 100%;
		z-index: 10002;
	}

		body.is-preload #header {
			-moz-transform: translateY(-4em);
			-webkit-transform: translateY(-4em);
			-ms-transform: translateY(-4em);
			transform: translateY(-4em);
		}

		#header h1 {
			color: #a0a0a1;
			display: inline-block;
			font-size: 1em;
			line-height: 1;
			margin: 0;
			vertical-align: middle;
		}

			#header h1 a {
				border: 0;
				color: inherit;
			}

				#header h1 a:hover {
					color: inherit !important;
				}

		#header nav {
			position: absolute;
			right: 0;
			top: 0;
		}

			#header nav > ul {
				list-style: none;
				margin: 0;
				padding: 0;
			}

				#header nav > ul > li {
					display: inline-block;
					padding: 0;
				}

					#header nav > ul > li a {
						-moz-transition: background-color 0.5s ease;
						-webkit-transition: background-color 0.5s ease;
						-ms-transition: background-color 0.5s ease;
						transition: background-color 0.5s ease;
						border: 0;
						color: #ffffff;
						display: inline-block;
						letter-spacing: 0.1em;
						padding: 0 1.65em;
						text-transform: uppercase;
					}

						#header nav > ul > li a.icon:before {
							color: #505051;
							float: right;
							margin-left: 0.75em;
						}

						#header nav > ul > li a:hover {
							color: #ffffff !important;
						}

						#header nav > ul > li a.active {
							background-color: #242629;
						}

	@media screen and (max-width: 736px) {

		body {
			padding: 4em 0 0 0;
		}

		#header {
			-moz-transform: translateY(0);
			-webkit-transform: translateY(0);
			-ms-transform: translateY(0);
			transform: translateY(0);
			bottom: auto;
			height: 4em;
			padding: 0 1em;
			top: 0;
		}

			body.is-preload #header {
				-moz-transform: translateY(-3.4em);
				-webkit-transform: translateY(-3.4em);
				-ms-transform: translateY(-3.4em);
				transform: translateY(-3.4em);
			}

			#header h1 {
				font-size: 0.9em;
			}

			#header nav > ul > li a {
				font-size: 0.9em;
				padding: 0 1.15em;
			}


	}

/* Main */

	#main {
		-moz-transition: -moz-filter 0.5s ease, -webkit-filter 0.5s ease, -ms-filter 0.5s ease, -moz-filter 0.5s ease;
		-webkit-transition: -moz-filter 0.5s ease, -webkit-filter 0.5s ease, -ms-filter 0.5s ease, -webkit-filter 0.5s ease;
		-ms-transition: -moz-filter 0.5s ease, -webkit-filter 0.5s ease, -ms-filter 0.5s ease, -ms-filter 0.5s ease;
		transition: -moz-filter 0.5s ease, -webkit-filter 0.5s ease, -ms-filter 0.5s ease, filter 0.5s ease;
		display: -moz-flex;
		display: -webkit-flex;
		display: -ms-flex;
		display: flex;
		-moz-flex-wrap: wrap;
		-webkit-flex-wrap: wrap;
		-ms-flex-wrap: wrap;
		flex-wrap: wrap;
		-webkit-tap-highlight-color: rgba(255, 255, 255, 0);
        padding-top:4em;
	}

		#main .thumb {
			-moz-transition: opacity 1.25s ease-in-out;
			-webkit-transition: opacity 1.25s ease-in-out;
			-ms-transition: opacity 1.25s ease-in-out;
			transition: opacity 1.25s ease-in-out;
			pointer-events: auto;
			-webkit-tap-highlight-color: rgba(255, 255, 255, 0);
			opacity: 1;
			overflow: hidden;
			position: relative;
		}
/* ... */

